# ontology-wasm-cdt-rust

./: .gitignore  .rustfmt.toml  .travis.build.sh  .travis.yml  Cargo.toml  LICENSE  LICENSE-THIRD-PARTY  README.md  README_CN.md  README_EN.md  build.sh  pythontorust.md  tutorial_cn.md  tutorial_en  tutorial_en.md
.github/workflows/: rust.yml
examples/: Cargo.toml  build.sh
examples/apitest/: Cargo.toml
examples/apitest/src/: lib.rs  test.rs
examples/bridge/: Cargo.toml  README.md  build.sh
examples/bridge/src/: erc20.rs  events.rs  lib.rs  oep4.rs
examples/call-neovm/: Cargo.toml
examples/call-neovm/src/: lib.rs  neovm.rs
examples/call_native/: Cargo.toml
examples/call_native/src/: lib.rs
examples/gov/: Cargo.toml
examples/gov/src/: lib.rs
examples/helloworld/: Cargo.toml
examples/helloworld/src/: lib.rs
examples/invoke-native-test/: Cargo.toml
examples/invoke-native-test/src/: lib.rs
examples/notify-test/: Cargo.toml
examples/notify-test/src/: lib.rs
examples/oep5token/: Cargo.toml
examples/oep5token-codegen/: Cargo.toml
examples/oep5token-codegen/src/: lib.rs  test.rs
examples/oep5token/src/: lib.rs  test.rs
examples/oep8token/: Cargo.toml
examples/oep8token/src/: lib.rs  test.rs
examples/oracle/: Cargo.toml
examples/oracle/src/: lib.rs  method.rs  storage.rs
examples/oracle/tests/: tests.rs
examples/red-envlope/: Cargo.toml
examples/red-envlope/src/: lib.rs
examples/src/: lib.rs
examples/token/: Cargo.toml
examples/token-codegen/: Cargo.toml
examples/token-codegen/src/: lib.rs  test.rs
examples/token-zero-copy/: Cargo.toml  build.sh
examples/token-zero-copy/src/: lib.rs
examples/token/src/: lib.rs
examples/wasm-call-wasm/: Cargo.toml
examples/wasm-call-wasm/src/: lib.rs
ontio-bump-alloc/: Cargo.toml
ontio-bump-alloc/src/: lib.rs
ontio-codegen/: Cargo.toml  oep4_abi.json
ontio-codegen/src/: base58.rs  contract.rs  doc.md  event.rs  json2go.rs  lib.rs  template.go
ontio-codegen/tests/: smoke.rs
ontio-derive-codec/: Cargo.toml
ontio-derive-codec/src/: lib.rs
ontio-serialize/: Cargo.toml
ontio-serialize/src/: lib.rs
ontio-std/: Cargo.toml  build.sh
ontio-std/src/: console.rs  contract.rs  database.rs  lib.rs  macros.rs  runtime.rs  types.rs  utils.rs
ontio-std/src/abi/: codec.rs  event_builder.rs  mod.rs  neo_param_builder.rs  neo_parameter_codec.rs  sink.rs  source.rs  vm_value_builder.rs  vm_value_codec.rs  zero_copy_source.rs
ontio-std/src/database/: database.rs  hashmap.rs  list.rs  mod.rs
ontio-std/src/mock/: contract_mock.rs  mod.rs  runtime.rs
ontio-std/src/types/: num.rs
ontio-wasm-check/: Cargo.toml
ontio-wasm-check/src/: check_wasm.rs  common.rs  lib.rs  main.rs  test.rs
