[workspace]
members = [
    "ontio-std",
    "ontio-codegen",
    "ontio-bump-alloc",
    "examples/token",
    "examples/token-codegen",
    "examples/oep5token",
    "examples/oep8token",
    "examples/apitest",
    "examples/helloworld",
    "examples/red-envlope"
]

[profile.release]
panic = "abort"
lto = true
debug = true
opt-level = "s"

