[package]
name = "demo"
version = "0.1.0"
authors = ["laizy <aochyi@126.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
ontio-std = {path="../ontio-std"}

[features]
test = ["ontio-std/test"]

[profile.release]
panic = "abort"
lto = true
debug = true
opt-level = "s"

[workspace]
members = [
    "token",
    "token-codegen"
]
