[package]
name = "ontio-codegen"
version = "0.1.0"
authors = ["laizy <aochyi@126.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.24", features = ["full", "extra-traits"] }
quote = "0.6"
proc-macro2 = "0.4.24"
sha2 = { version = "0.8", default-features = false }
num = { version = "0.2"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
ontio-std  = {path="../ontio-std"}

[features]
mock = ["ontio-std/mock"]

