[package]
name = "ontio-codegen"
version = "0.1.0"
authors = ["laizy <aochyi@126.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
sha2 = { version = "0.8", default-features = false }
num = { version = "0.2"}
heck = {version = "0.3.1",default-features = false}

[dev-dependencies]
ontio-std  = {path="../ontio-std"}

[features]
mock = ["ontio-std/mock"]

