[package]
name = "ontio-codegen"
version = "0.2.1"
authors = ["laizy <aochyi@126.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
homepage = "https://github.com/ontio/ontology-wasm-cdt-rust"
repository = "https://github.com/ontio/ontology-wasm-cdt-rust"
description = "codegen for ontio-std"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
sha2 = { version = "0.9", default-features = false }
num = { version = "0.3"}
heck = {version = "0.3.1",default-features = false}

