[package]
name = "ontio-derive-codec"
version = "0.1.0"
authors = ["Lucas <sishsh@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.24", features = ["full", "extra-traits"] }
quote = "0.6"
proc-macro2 = "0.4.24"

[dev-dependencies]
ontio-std  = {path="../ontio-std"}

[features]
mock = ["ontio-std/mock"]