[package]
name = "ontio-std"
version = "0.1.0"
authors = ["laizy <aochyi@126.com>"]
edition = "2018"

[dependencies]
wee_alloc = "0.4"
ontio-bump-alloc = {path = "../ontio-bump-alloc", optional = true}
bigint = { version = "4.4", default-features = false }
fixed-hash = { version = "0.3", default-features = false }
cfg-if = { version = "0.1", default-features = false }
byteorder = { version = "1", default-features = false }
ontio-codegen = { path = "../ontio-codegen"}
etcommon-hexutil = { version = "0.2.4", default-features = false }

[dev-dependencies]
rand = "0.6"

[features]
std = []
bump-alloc = ["ontio-bump-alloc"]
mock = ["std", "fixed-hash/default"]
