[package]
name = "ontio-std"
version = "0.4.0"
authors = ["laizy <aochyi@126.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
homepage = "https://github.com/ontio/ontology-wasm-cdt-rust"
repository = "https://github.com/ontio/ontology-wasm-cdt-rust"
description = "development library for ontology wasm contract"

[dependencies]
wee_alloc = "0.4"
ontio-bump-alloc = {version = "0.1", path = "../ontio-bump-alloc", optional = true}
fixed-hash = { version = "0.4", default-features = false }
cfg-if = { version = "0.1", default-features = false }
byteorder = { version = "1", default-features= false, features = ["i128"] }
ontio-codegen = { version = "0.2.1",  path = "../ontio-codegen"}
ontio-derive-codec = { version = "0.2", path = "../ontio-derive-codec"}
sha2 = {version="0.9", optional=true}
uint = {version = "0.8.5", default-features=false}

[dev-dependencies]
rand = "0.7.0"

[features]
std = []
bump-alloc = ["ontio-bump-alloc"]
mock = ["std", "fixed-hash/default", "sha2"]

