[package]
name = "apitest"
version = "0.1.0"
authors = ["lucas7788 <sishsh@163.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
ontio-std = {path="../../ontio-std"}
hex = "0.3.2"
etcommon-hexutil = { version = "0.2.4", default-features = false }

[features]
mock = ["ontio-std/mock"]
