[package]
name = "call_native"
version = "0.1.0"
authors = ["lucas7788 <sishsh@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
ontio-std = {path="../../ontio-std", features=["bump-alloc"]}

[features]
mock = ["ontio-std/mock"]

