[package]
name = "oracle"
version = "0.1.0"
authors = ["qiluge <wangcheng@onchain.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ontio-std = {path="../../ontio-std"}

[lib]
crate-type = ["cdylib", "rlib"] #Compile as a dynamic link library


[features]
mock = ["ontio-std/mock"]